# freeman

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: constants.rs  curl.rs  lib.rs  main.rs  models.rs  storage.rs  ui.rs
src/app/: actor.rs  commands.rs  mod.rs  state.rs
src/discovery/: detector.rs  django.rs  express.rs  java.rs  mod.rs  models.rs  nestjs.rs  openapi.rs  php.rs  python.rs
src/messages/: mod.rs  network.rs  render.rs  ui_events.rs
src/network/: actor.rs  client.rs  mod.rs  websocket.rs
