[package]
name = "freeman-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "A terminal-based API testing tool - like Postman, but for your terminal"
license = "MIT"
authors = ["ryoumen0412"]
repository = "https://github.com/ryoumen0412/freeman"
homepage = "https://github.com/ryoumen0412/freeman"
documentation = "https://github.com/ryoumen0412/freeman#readme"
readme = "README.md"
keywords = ["api", "http", "tui", "rest", "testing"]
categories = [
    "command-line-utilities",
    "development-tools",
    "web-programming::http-client",
]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls-native-roots",
    "http2",
    "charset",
    "macos-system-configuration",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

regex = "1.11"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"

[dev-dependencies]
tempfile = "3.15"
